// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead two no pic and two - small - landscape 1`] = `
<VerticalLayout
  tiles={
    Array [
      <ExampleChild
        id="lead-1"
      >
        lead-1
      </ExampleChild>,
      <ExampleChild
        id="lead-2"
      >
        lead-2
      </ExampleChild>,
      <ExampleChild
        id="support-1"
      >
        support-1
      </ExampleChild>,
      <ExampleChild
        id="support-2"
      >
        support-2
      </ExampleChild>,
    ]
  }
/>
`;

exports[`2. front lead two no pic and two - medium - landscape 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <ExampleChild
            id="lead-1"
          >
            lead-1
          </ExampleChild>
        </View>,
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <ExampleChild
            id="lead-2"
          >
            lead-2
          </ExampleChild>
        </View>,
      ]
    }
  />
  <View />
  <View>
    <Text>
      support-1
    </Text>
  </View>
  <View />
  <View>
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>
</TabletContentContainer>
`;

exports[`3. front lead two no pic and two - wide - landscape 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <ExampleChild
            id="lead-1"
          >
            lead-1
          </ExampleChild>
        </View>,
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <ExampleChild
            id="lead-2"
          >
            lead-2
          </ExampleChild>
        </View>,
      ]
    }
  />
  <View />
  <View>
    <Text>
      support-1
    </Text>
  </View>
  <View />
  <View>
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>
</TabletContentContainer>
`;

exports[`4. front lead two no pic and two - huge - landscape 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <ExampleChild
            id="lead-1"
          >
            lead-1
          </ExampleChild>
        </View>,
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <ExampleChild
            id="lead-2"
          >
            lead-2
          </ExampleChild>
        </View>,
      ]
    }
  />
  <View />
  <View>
    <Text>
      support-1
    </Text>
  </View>
  <View />
  <View>
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>
</TabletContentContainer>
`;

exports[`5. front lead two no pic and two - small - portrait 1`] = `
<VerticalLayout
  tiles={
    Array [
      <ExampleChild
        id="lead-1"
      >
        lead-1
      </ExampleChild>,
      <ExampleChild
        id="lead-2"
      >
        lead-2
      </ExampleChild>,
      <ExampleChild
        id="support-1"
      >
        support-1
      </ExampleChild>,
      <ExampleChild
        id="support-2"
      >
        support-2
      </ExampleChild>,
    ]
  }
/>
`;

exports[`6. front lead two no pic and two - medium - portrait 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <ExampleChild
            id="lead-1"
          >
            lead-1
          </ExampleChild>
        </View>,
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <ExampleChild
            id="lead-2"
          >
            lead-2
          </ExampleChild>
        </View>,
      ]
    }
  />
  <View />
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <ExampleChild
            id="support-2"
          >
            support-2
          </ExampleChild>
        </View>,
        <ExampleChild
          id="support-1"
        >
          support-1
        </ExampleChild>,
      ]
    }
  />
</TabletContentContainer>
`;

exports[`7. front lead two no pic and two - wide - portrait 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <ExampleChild
            id="lead-1"
          >
            lead-1
          </ExampleChild>
        </View>,
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <ExampleChild
            id="lead-2"
          >
            lead-2
          </ExampleChild>
        </View>,
      ]
    }
  />
  <View />
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <ExampleChild
            id="support-2"
          >
            support-2
          </ExampleChild>
        </View>,
        <ExampleChild
          id="support-1"
        >
          support-1
        </ExampleChild>,
      ]
    }
  />
</TabletContentContainer>
`;

exports[`8. front lead two no pic and two - huge - portrait 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <ExampleChild
            id="lead-1"
          >
            lead-1
          </ExampleChild>
        </View>,
        <View
          style={
            Object {
              "flex": 4,
            }
          }
        >
          <ExampleChild
            id="lead-2"
          >
            lead-2
          </ExampleChild>
        </View>,
      ]
    }
  />
  <View />
  <VerticalLayout
    rowSeparatorStyle={
      Object {
        "borderColor": "#999999",
      }
    }
    tiles={
      Array [
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <ExampleChild
            id="support-2"
          >
            support-2
          </ExampleChild>
        </View>,
        <ExampleChild
          id="support-1"
        >
          support-1
        </ExampleChild>,
      ]
    }
  />
</TabletContentContainer>
`;
